# pubextract

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: testing.yml
src/pubextract/: _utils.py  methods_finder.py  term_search.py
src/pubextract/author_locations/: _guessing_locations.py  _pubget.py  _reading_xml.py  test.py
src/pubextract/authors/: author_genders.py
src/pubextract/cluster_inference/: cluster_inference_terms.csv
src/pubextract/methods_finder/: methods_finder.py
src/pubextract/methods_finder/_data/: methods_terms.csv
src/pubextract/participants/: __init__.py  _information_extraction.py  _pubget.py  _summarization.py
tests/: test_author_genders.py  test_information_extraction.py  test_methods_finder.py  test_term_search.py
tests/data/pubget_data/: pubget_code.sh
tests/data/pubget_data/query_a63e5571ad90a97b9ac76dc0684e2fcf/articles/: info.json
tests/data/pubget_data/query_a63e5571ad90a97b9ac76dc0684e2fcf/articlesets/: articleset_00000.xml  info.json  query.txt
tests/data/pubget_data/query_a63e5571ad90a97b9ac76dc0684e2fcf/subset_allArticles_extractedData/: authors.csv  authors_with_genders.csv  coordinate_space.csv  coordinates.csv  info.json  links.csv  metadata.csv  text.csv
tests/test_author_locations/: test_guessing_locations.py
tests/test_methods_finder/: test_methods_finder.py  test_term_search.py
tests/test_methods_finder/data/annotations/: test_annotations.jsonl
tests/test_methods_finder/data/documents/: test_documents.jsonl
tests/test_participants/: test_information_extraction.py
(+40 files in other folders)
