[metadata]
name = pubextract

[options]
packages = find:
package_dir =
    =src
install_requires =
    lark
    neuroquery
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
pubextract.participants._data = *
pubextract.methods_finder._data = *.csv

[options.entry_points]
pubget.plugin_actions =
    get_pubget_actions = pubextract.participants._pubget:get_pubget_actions