[metadata]
name = pubextract

[options]
packages = find:
package_dir =
    =src
install_requires =
    lark
    neuroquery
    gender-guesser
    Unidecode
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
pubextract.participants._data = *
pubextract.methods_finder._data = *.csv
pubextract.authors._data = *
pubextract.author_locations._data = *

[options.entry_points]
pubget.plugin_actions =
    get_pubget_actions-author_locations = pubextract.author_locations._pubget:get_pubget_actions
    get_pubget_actions-demographics = pubextract.participants._pubget:get_pubget_actions

